chore(config)：更新管理员邮箱并启用邮件通知
- 将硬编码的管理员邮箱替换为可配置的邮件服务
- 在所有配置文件中将管理员邮箱从 admin@blog.com 更新为 xiaowansheng@foxmail.com
- 在应用配置中启用邮件通知渠道
- 为 EmailService 字段添加 @Getter 注解，便于外部访问
- 更新 OpenAPI 文档，修正联系邮箱和 GitHub 仓库地址
- 在 DataInitializer 中注入 EmailService，从配置中动态设置管理员邮箱
- 在 CommentPublicServiceImpl 中使用 toList() 简化 Stream 收集逻辑
- 移除评论创建逻辑中冗余的空值检查
- 集中管理邮件相关配置，减少硬编码，提升可维护性